fix article list time width when broken in safari and mobile chrome

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -541,7 +541,6 @@ $asset-prefix: "style";
 								color: #c7c7c7;
 								position: absolute;
 								right: 20px;
-								width: 30px;
 							}
 						}						
 					}
